# counter-app

./: .gitignore  Dockerfile  README.md  create_user.sh  docker-compose.yaml  pyproject.toml  spicedb.schema
.github/workflows/: push-new-service-image.yaml
chart/: Chart.yaml  values.yaml
chart/templates/: deployment.yaml  istio.yaml  rollout.yaml  service-monitor.yaml
config/: keto.yml
counter_app/: asgi.py  containers.py  counter.py  health.py  logging.py  main.py  metric.py  redis.py  services.py
counter_app/modules/auth/: dependencies.py  service.py
counter_app/modules/counter/: api.py  containers.py  model.py  repository.py  service.py
counter_app/modules/errors/: api.py
counter_app/modules/health/: api.py
counter_app/modules/permissions/: containers.py  dependencies.py  model.py  service.py
counter_app/ory/keto/acl/v1alpha1/: acl_pb2.py  acl_pb2.pyi  check_service_pb2.py  check_service_pb2.pyi  check_service_pb2_grpc.py  expand_service_pb2.py  expand_service_pb2.pyi  expand_service_pb2_grpc.py  read_service_pb2.py  read_service_pb2.pyi  read_service_pb2_grpc.py  write_service_pb2.py  write_service_pb2.pyi  write_service_pb2_grpc.py
dbschema/: default.esdl
dbschema/migrations/: 00001.edgeql  00002.edgeql
proto/: README.md
proto/ory/keto/acl/v1alpha1/: acl.proto  check_service.proto  expand_service.proto  read_service.proto
tests/: conftest.py  test_counter.py  test_health.py
tests/modules/: test_auth.py  test_permissions.py
