[tool.poetry]
name = "counter_app"
version = "0.1.0"
description = ""
authors = ["DZhuribeda <zhurbikk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = {version = "^22.1.0", allow-prereleases = true}
requests = "^2.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
server = "counter_app.asgi:server"