[tool.poetry]
name = "counter_app"
version = "0.1.0"
description = ""
authors = ["DZhuribeda <zhurbikk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
dependency-injector = "^4.38.0"
aioredis = "^2.0.1"
prometheus-fastapi-instrumentator = "^5.7.1"
structlog = "^21.5.0"
opentelemetry-instrumentation-fastapi = "^0.29b0"
opentelemetry-api = "^1.10.0"
opentelemetry-sdk = "^1.10.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = {version = "^22.1.0", allow-prereleases = true}
requests = "^2.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
server = "counter_app.asgi:server"